@startuml SAE_UML_Version1
skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #FFF9DB
skinparam classBorderColor #000000
skinparam classFontColor #000000
skinparam classFontSize 16
skinparam classFontStyle bold
skinparam classAttributeFontColor #000000
skinparam classAttributeFontSize 14
skinparam classAttributeFontStyle normal
skinparam classStereotypeFontColor #000000
skinparam classStereotypeFontSize 12
skinparam classStereotypeFontStyle italic
skinparam shadowing false
skinparam ArrowColor #000000
skinparam ArrowFontColor #000000
skinparam interfaceBackgroundColor #FFF9DB
skinparam interfaceBorderColor #000000
skinparam interfaceFontColor #000000
skinparam interfaceFontSize 16
skinparam interfaceFontStyle bold
skinparam interfaceStereotypeFontColor #000000
skinparam interfaceStereotypeFontSize 12
skinparam interfaceStereotypeFontStyle italic
skinparam linetype ortho
skinparam classAttributeIconSize 0


left to right direction

together {
  class Adolescent {
    - lastName: String
    - firstName: String
    - gender: String
    - countryOfOrigin: String
    - criteria: Map<Criteres, String>
    - dateOfBirth: LocalDate
    --
    + addCriterion(Criteres, String): void
    + toString(): String
    + isCompatible(Adolescent): boolean
    + isAnimalCompatible(Adolescent): boolean
    + isDietCompatible(Adolescent): boolean
    + isHistoryCompatible(Adolescent): boolean
    + calculateAffinity(Adolescent): int
    + calculateAgeDifferent(Adolescent): double
  }

  enum Criteres {
    GUEST_ANIMAL_ALLERGY
    HOST_HAS_ANIMAL
    GUEST_FOOD
    HOST_FOOD
    HOBBIES
    GENDER
    PAIR_GENDER
    HISTORY
    --
    + isValid(valeur: String): boolean
    + getType(): char
  }
}

together {
  class Affectation {
    - host: List<Adolescent>
    - visitor: List<Adolescent>
    - pairs: List<Map<Adolescent, Adolescent>>
    --
    + calculatePairing(): Map<Adolescent, Adolescent>
  }

  class Main {
    --
    + loadInitialData(): void
    + launchAssignment(): void
    + displayResults(): void
  }
}

Adolescent --> Criteres : utilise
Affectation --> Adolescent : concerne
Main ..> Affectation : créé et utilise

@enduml 